hphp/test/slow/record/record-prop.php.expectf
int(1)

Catchable fatal error: Property 'Foo::x' declared as type A, B assigned in %s/record-prop.php on line 22
